--- a/Kuldip_parmar.ipynb
+++ b/Kuldip_parmar.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1UcO6tzWvRb4H9ovTuOKI4tdZr9rYgUxq",
-      "authorship_tag": "ABX9TyPvtvmmYsZs/kRkmoc69Aa5",
+      "authorship_tag": "ABX9TyP5uKIoiWJXLjyFEd7fnEJv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 2,
       "metadata": {
         "id": "IK3VwtSR6x_u"
       },
@@ -80,9 +80,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Neva7zv7-PY",
-        "outputId": "b9a9dde1-bd00-4471-f5a4-a8a7dc32f818"
+        "outputId": "598f8410-fd1f-43be-adf9-b5ebedbaeca3"
       },
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
         "id": "pu-SUcb8_lel",
         "outputId": "0a1a5eec-64a1-472d-f60d-ed4d92f2b111"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,45 +424,65 @@
     {
       "cell_type": "code",
       "source": [
-        "play_store['Rating']=play_store['Rating'].replace(np.nan,0)\n",
-        "play_store.info()"
+        "play_store.loc[play_store['Current Ver'].isin([np.nan])]\n",
+        "\n",
+        "#play_store.loc[2]\n",
+        "play_store['Android Ver'].unique()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GXFNngi1R6_-",
-        "outputId": "216edea6-caa0-4bcb-81bf-c2ad642503cc"
+        "id": "FnpK_5826eC2",
+        "outputId": "90345265-8cb3-4a7b-f920-d2d4eec32c87"
       },
-      "execution_count": 26,
+      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 10841 entries, 0 to 10840\n",
-            "Data columns (total 13 columns):\n",
-            " #   Column          Non-Null Count  Dtype  \n",
-            "---  ------          --------------  -----  \n",
-            " 0   App             10841 non-null  object \n",
-            " 1   Category        10841 non-null  object \n",
-            " 2   Rating          10841 non-null  float64\n",
-            " 3   Reviews         10841 non-null  object \n",
-            " 4   Size            10841 non-null  object \n",
-            " 5   Installs        10841 non-null  object \n",
-            " 6   Type            10840 non-null  object \n",
-            " 7   Price           10841 non-null  object \n",
-            " 8   Content Rating  10840 non-null  object \n",
-            " 9   Genres          10841 non-null  object \n",
-            " 10  Last Updated    10841 non-null  object \n",
-            " 11  Current Ver     10833 non-null  object \n",
-            " 12  Android Ver     10838 non-null  object \n",
-            "dtypes: float64(1), object(12)\n",
-            "memory usage: 1.1+ MB\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['4.0.3 and up', '4.2 and up', '4.4 and up', '2.3 and up',\n",
+              "       '3.0 and up', '4.1 and up', '4.0 and up', '2.3.3 and up',\n",
+              "       'Varies with device', '2.2 and up', '5.0 and up', '6.0 and up',\n",
+              "       '1.6 and up', '1.5 and up', '2.1 and up', '7.0 and up',\n",
+              "       '5.1 and up', '4.3 and up', '4.0.3 - 7.1.1', '2.0 and up',\n",
+              "       '3.2 and up', '4.4W and up', '7.1 and up', '7.0 - 7.1.1',\n",
+              "       '8.0 and up', '5.0 - 8.0', '3.1 and up', '2.0.1 and up',\n",
+              "       '4.1 - 7.1.1', nan, '5.0 - 6.0', '1.0 and up', '2.2 - 7.1.1',\n",
+              "       '5.0 - 7.1.1'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#here we replaced null to 0 in  Rating column which has float datatype\n",
+        "play_store['Rating']=play_store['Rating'].replace(np.nan,0)\n",
+        "\n",
+        "#here we fill 1 missing value as 'Unknown'\n",
+        "play_store['Type']=play_store['Type'].replace(np.nan,'Unknown')\n",
+        "\n",
+        "#here we fill 1 missing value as 'Unknown'\n",
+        "play_store['Content Rating']=play_store['Content Rating'].replace(np.nan,'Unknown')\n",
+        "\n",
+        "#here we fill 8 missing value as '1.0.0' lowest possible Current version\n",
+        "play_store['Current Ver']=play_store['Current Ver'].replace(np.nan,'1.0.0')\n",
+        "\n",
+        "#here we fill 8 missing value as '1.0.0' lowest possible Current version\n",
+        "play_store['Android Ver']=play_store['Android Ver'].replace(np.nan,'1.0 and up')\n",
+        "\n",
+        "play_store.info()"
+      ],
+      "metadata": {
+        "id": "GXFNngi1R6_-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
