--- a/Kuldip_parmar.ipynb
+++ b/Kuldip_parmar.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1UcO6tzWvRb4H9ovTuOKI4tdZr9rYgUxq",
-      "authorship_tag": "ABX9TyP5uKIoiWJXLjyFEd7fnEJv",
+      "authorship_tag": "ABX9TyNJyyL8eOTJ52L6/PkNyYkL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "IK3VwtSR6x_u"
       },
@@ -82,7 +82,7 @@
         "id": "4Neva7zv7-PY",
         "outputId": "598f8410-fd1f-43be-adf9-b5ebedbaeca3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +415,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Secondly we replace some null value with 0 to do some operations on data"
+        "# Secondly we fill missing values to make data meaningful and could do operation within."
       ],
       "metadata": {
         "id": "vw42xryhOZ_v"
@@ -436,7 +436,7 @@
         "id": "FnpK_5826eC2",
         "outputId": "90345265-8cb3-4a7b-f920-d2d4eec32c87"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
