price column cleaning started

--- a/Kuldip_parmar.ipynb
+++ b/Kuldip_parmar.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1UcO6tzWvRb4H9ovTuOKI4tdZr9rYgUxq",
-      "authorship_tag": "ABX9TyP/16gt37Zt2Jgo7suxchlx",
+      "authorship_tag": "ABX9TyP6b4oZHwqQhwpdwfeOCKrl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **3) DATA ANALYSIS OF DATASET**\n",
+        "# **3) ANALYSIS OF DATASET**\n",
         "\n",
         "> we understand first the columns and rows and the information associated within.\n",
         "\n"
@@ -734,6 +734,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "-9YTAkaFoLFI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "\n",
@@ -748,7 +759,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**4.1  *Installs* COLUMN CLEANING** \n",
+        "# 4.1  *Installs* column cleaning \n",
         "\n",
         "\n",
         "\n"
@@ -961,6 +972,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 4.2  *Price* column cleaning"
+      ],
+      "metadata": {
+        "id": "yrLy-Lepoys1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#here we replaced null to 0 in  Rating column which has float datatype\n",
@@ -1045,6 +1065,26 @@
           "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **5) DATA OPERATIONS AND  VISUALIZATION**"
+      ],
+      "metadata": {
+        "id": "3SED4sVspa3N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "h6lNcYkVqM3V"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
